project(CS321)

SET(CMAKE_CXX_STANDARD 20)

add_executable(w1a1 "week1-app1.cpp")
add_executable(w2a1 "week2-app1.cpp")
add_executable(w3a1 "week3-app1.cpp" "week3-app1.hpp")
add_executable(w4a1 "week4-app1.cpp")
add_executable(w4a2 "week4-app2.cpp")
add_executable(w4a3 "week4-app3.cpp")
add_executable(w5a1 "week5-app1.cpp")
add_executable(w5a2 "week5-app2.cpp")
add_executable(w5a3 "week5-app3.cpp")
add_executable(w6a1 "week6-app1.cpp")
add_executable(w6a2 "week6-app2.cpp")
add_executable(w7a1 "week7-app1.cpp")
add_executable(w7a2 "week7-app2.cpp")
add_executable(w7a3 "week7-app3.cpp")
add_executable(w7a4 "week7-app4.cpp")
add_executable(w8a1 "week8-app1.cpp")
add_executable(w9a1 "week9-app1.cpp")
add_executable(w9a2 "week9-app2.cpp")
add_executable(w10a1 "week10-app1.cpp")
add_executable(w11a1 "week11-app1.cpp")
add_executable(w11a2 "week11-app2.cpp")
add_executable(composite "composite.cpp")
#add_executable(w11a3 "week11-app3.cpp")
#add_executable(w11a4 "week11-app4.cpp")
